# beyondAMP

./: .gitignore  README.md  pyproject.toml
scripts/: setup_ext.sh  setup_isaaclab_link.py  setup_vscode.py  test_env.py  update_ext.sh
scripts/factoryIsaac/: argtool.py  play.py  train.py
scripts/factoryMjlab/: README.md  train.py
source/amp_tasks/: pyproject.toml
source/amp_tasks/amp_tasks/amp/: amp_env_cfg.py
source/amp_tasks/amp_tasks/others/g1_punch_amp_only/: g1_punch_amp_only_env_cfg.py
source/amp_tasks/amp_tasks/others/g1_punch_hit/: __init__.py
source/amp_tasks/amp_tasks/tracking/: tracking_env_cfg.py
source/amp_tasks/amp_tasks/velocity/: isaac_velocity_env_cfg.py  unitree_velocity_env_cfg.py
source/amp_tasks/amp_tasks/velocity/mdp/: __init__.py  rewards.py
source/amp_tasks_mjlab/: setup.py
source/amp_tasks_mjlab/amp_tasks_mjlab/velocity/g1/: __init__.py  amp_env_cfg.py
source/beyondAMP/: pyproject.toml
source/beyondAMP/beyondAMP/isaaclab/rsl_rl/: amp_wrapper.py  exporter.py
source/beyondAMP/beyondAMP/mdp/: __init__.py  events.py  observations.py  rewards.py
source/beyondAMP/beyondAMP/mjlab/: __init__.py
source/beyondAMP/beyondAMP/mjlab/mdp/: __init__.py  observations.py
source/beyondAMP/beyondAMP/mjlab/obs_groups/: __init__.py  amp_obs_anchor.py  amp_obs_base.py  amp_obs_body.py
source/beyondAMP/beyondAMP/mjlab/rsl_rl/: __init__.py  amp_wrapper.py  vecenv_wrapper.py
source/beyondAMP/beyondAMP/motion/: motion_dataset.py  motion_transition.py  weighted_motion_dataset.py
source/beyondAMP/beyondAMP/motion/utils/: math.py
source/beyondAMP/beyondAMP/obs_groups/: __init__.py  amp_obs_body.py
source/rsl_rl_amp/: pyproject.toml  setup.py
source/rsl_rl_amp/rsl_rl_amp/algorithms/: __init__.py  ppo.py
source/rsl_rl_amp/rsl_rl_amp/modules/: __init__.py  actor_critic_multi.py  amp_discriminator.py
source/rsl_rl_amp/rsl_rl_amp/runners/: __init__.py  amp_on_policy_runner.py
source/rsl_rl_amp/rsl_rl_amp/storage/: rollout_storage_duel.py  rollout_storage_multi.py
source/rsl_rl_amp/rsl_rl_amp/utils/: utils.py
src/beyondAMP/amp_tasks/: amp_task_demo_data_cfg.py
src/beyondAMP/amp_tasks/others/: amp_env_cfg.py
src/beyondAMP/amp_tasks_mjlab/: __init__.py
src/beyondAMP/amp_tasks_mjlab/velocity/: __init__.py
src/beyondAMP/beyondAMP/mdp/: events.py
src/beyondAMP/beyondAMP/mjlab/mdp/: __init__.py
src/beyondAMP/beyondAMP/modules/: amp_discriminator.py
src/beyondAMP/beyondAMP/motion/: motion_dataset.py  weighted_motion_dataset.py
src/beyondAMP/beyondAMP/obs_groups/: amp_obs_anchor.py  amp_obs_base.py
src/beyondAMP/rsl_rl_amp/algorithms/: ppo.py
src/beyondAMP/rsl_rl_amp/modules/: actor_critic.py  actor_critic_recurrent.py  amp_discriminator.py
src/beyondAMP/rsl_rl_amp/runners/: amp_on_policy_runner.py  on_policy_runner.py
src/beyondAMP/rsl_rl_amp/storage/: rollout_storage.py  rollout_storage_duel.py  rollout_storage_multi.py
(+55 files in other folders)
