[project]
name = "beyondamp-workspace"
version = "0.1.0"
description = "UV workspace for beyondAMP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mjlab==1.3.0",
    "scipy>=1.18.0",
    "mujoco==3.9.0",
    "mujoco-warp==3.8.1",
	"warp-lang==1.12.0",
]


[tool.uv.sources]
robotlib = { git = "https://github.com/Renforce-Dynamics/robotlib" }

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = [
    "source/beyondAMP",
    "source/rsl_rl_amp",
    "source/amp_tasks",
    "source/amp_tasks_mjlab",
    "source/third_party/beyondMimic",
    "source/third_party/sim2simlib"
]
include = ["beyondAMP*", "rsl_rl*", "amp_tasks*", "beyondMimic*", "sim2simlib*"]
exclude = ["data*", "logs*", "scripts*", "docs*"]

[tool.ruff]
indent-width = 4
exclude = [
]

