[project]
name = "beyondamp"
version = "0.1.0"
description = "UV for beyondAMP"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "mjlab==1.3.0",
    "scipy>=1.18.0",
    "mujoco==3.9.0",
    "mujoco-warp==3.8.1",
	"warp-lang==1.12.0",
	"rsl-rl-lib==5.0.1",
	"robotlib",
]


[tool.uv.sources]
robotlib = { git = "https://github.com/Renforce-Dynamics/robotlib" }

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
src = ["src"]
indent-width = 4
exclude = [
	"src/beyondAMP/third_party",
	"typings",
]

